src/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Unused terminals:

    DO
    RETURN
    WHILE
    EXTERN
    SIZEOF
    COLON
    PERIOD
    ELSE
    IF
    STRUCT
    PPHASH

Grammar

Rule 0     S' -> first
Rule 1     first -> beginning_list
Rule 2     first -> empty
Rule 3     beginning_list -> beginning_list comment
Rule 4     beginning_list -> beginning_list function_declaration
Rule 5     beginning_list -> beginning_list type
Rule 6     beginning_list -> beginning_list declaration
Rule 7     beginning_list -> beginning_list compound
Rule 8     beginning_list -> beginning_list assignment_expression_semi
Rule 9     beginning_list -> beginning_list expr
Rule 10    beginning_list -> beginning_list for_loop
Rule 11    beginning_list -> empty
Rule 12    comment -> COMMENT
Rule 13    arg_params -> typeid COMMA arg_params
Rule 14    arg_params -> typeid
Rule 15    arg_params -> empty
Rule 16    arglist -> LPAREN arg_params RPAREN
Rule 17    assignment_operator -> EQUALS
Rule 18    assignment_operator -> PLUSEQUALS
Rule 19    assignment_operator -> MINUSEQUALS
Rule 20    assignment_operator -> TIMESEQUALS
Rule 21    assignment_expression -> typeid assignment_operator expr
Rule 22    assignment_expression -> identifier assignment_operator expr
Rule 23    assignment_expression -> array_reference assignment_operator expr
Rule 24    assignment_expression_semi -> assignment_expression SEMI
Rule 25    constant -> INT_CONST
Rule 26    constant -> FLOAT_CONST
Rule 27    constant -> STRING_LITERAL
Rule 28    unary_token_before -> MINUS
Rule 29    unary_token_before -> LOGNOT
Rule 30    unary_token_after -> PLUSPLUS
Rule 31    unary_token_after -> MINUSMINUS
Rule 32    unary_expression -> unary_token_before term
Rule 33    increment -> term unary_token_after
Rule 34    binop_paren -> LPAREN binop_expression RPAREN
Rule 35    binop_paren -> binop_expression
Rule 36    binop_expression -> term
Rule 37    binop_expression -> binop_paren TIMES binop_paren
Rule 38    binop_expression -> binop_paren DIVIDE binop_paren
Rule 39    binop_expression -> binop_paren binary_token binop_paren
Rule 40    binop -> binop_expression
Rule 41    expr -> unary_expression
Rule 42    expr -> binop
Rule 43    expr -> term
Rule 44    binary_token -> PLUS
Rule 45    binary_token -> MINUS
Rule 46    binary_token -> MOD
Rule 47    binary_token -> OR
Rule 48    binary_token -> AND
Rule 49    binary_token -> LSHIFT
Rule 50    binary_token -> RSHIFT
Rule 51    binary_token -> LOGOR
Rule 52    binary_token -> LOGAND
Rule 53    binary_token -> LT
Rule 54    binary_token -> GT
Rule 55    binary_token -> LE
Rule 56    binary_token -> GE
Rule 57    binary_token -> EQ
Rule 58    binary_token -> NE
Rule 59    subscript -> LBRACKET expr RBRACKET
Rule 60    subscript_list -> subscript
Rule 61    subscript_list -> subscript subscript_list
Rule 62    array_reference -> identifier subscript_list
Rule 63    for_loop -> FOR LPAREN assignment_expression SEMI binop SEMI increment RPAREN compound
Rule 64    term -> identifier
Rule 65    term -> constant
Rule 66    term -> array_reference
Rule 67    compound -> LBRACE beginning_list RBRACE
Rule 68    function_declaration -> typeid arglist SEMI
Rule 69    function_declaration -> typeid arglist compound
Rule 70    declaration -> typeid SEMI
Rule 71    typeid -> type identifier
Rule 72    native_type -> VOID
Rule 73    native_type -> SIZE_T
Rule 74    native_type -> UNKNOWN
Rule 75    native_type -> CHAR
Rule 76    native_type -> SHORT
Rule 77    native_type -> INT
Rule 78    native_type -> LONG
Rule 79    native_type -> FLOAT
Rule 80    native_type -> DOUBLE
Rule 81    native_type -> SIGNED
Rule 82    native_type -> UNSIGNED
Rule 83    type -> native_type
Rule 84    type -> native_type TIMES
Rule 85    identifier -> ID
Rule 86    empty -> <empty>

Terminals, with rules where they appear

AND                  : 48
CHAR                 : 75
COLON                : 
COMMA                : 13
COMMENT              : 12
DIVIDE               : 38
DO                   : 
DOUBLE               : 80
ELSE                 : 
EQ                   : 57
EQUALS               : 17
EXTERN               : 
FLOAT                : 79
FLOAT_CONST          : 26
FOR                  : 63
GE                   : 56
GT                   : 54
ID                   : 85
IF                   : 
INT                  : 77
INT_CONST            : 25
LBRACE               : 67
LBRACKET             : 59
LE                   : 55
LOGAND               : 52
LOGNOT               : 29
LOGOR                : 51
LONG                 : 78
LPAREN               : 16 34 63
LSHIFT               : 49
LT                   : 53
MINUS                : 28 45
MINUSEQUALS          : 19
MINUSMINUS           : 31
MOD                  : 46
NE                   : 58
OR                   : 47
PERIOD               : 
PLUS                 : 44
PLUSEQUALS           : 18
PLUSPLUS             : 30
PPHASH               : 
RBRACE               : 67
RBRACKET             : 59
RETURN               : 
RPAREN               : 16 34 63
RSHIFT               : 50
SEMI                 : 24 63 63 68 70
SHORT                : 76
SIGNED               : 81
SIZEOF               : 
SIZE_T               : 73
STRING_LITERAL       : 27
STRUCT               : 
TIMES                : 37 84
TIMESEQUALS          : 20
UNKNOWN              : 74
UNSIGNED             : 82
VOID                 : 72
WHILE                : 
error                : 

Nonterminals, with rules where they appear

arg_params           : 13 16
arglist              : 68 69
array_reference      : 23 66
assignment_expression : 24 63
assignment_expression_semi : 8
assignment_operator  : 21 22 23
beginning_list       : 1 3 4 5 6 7 8 9 10 67
binary_token         : 39
binop                : 42 63
binop_expression     : 34 35 40
binop_paren          : 37 37 38 38 39 39
comment              : 3
compound             : 7 63 69
constant             : 65
declaration          : 6
empty                : 2 11 15
expr                 : 9 21 22 23 59
first                : 0
for_loop             : 10
function_declaration : 4
identifier           : 22 62 64 71
increment            : 63
native_type          : 83 84
subscript            : 60 61
subscript_list       : 61 62
term                 : 32 33 36 43
type                 : 5 71
typeid               : 13 14 21 68 69 70
unary_expression     : 41
unary_token_after    : 33
unary_token_before   : 32

Parsing method: LALR

state 0

    (0) S' -> . first
    (1) first -> . beginning_list
    (2) first -> . empty
    (3) beginning_list -> . beginning_list comment
    (4) beginning_list -> . beginning_list function_declaration
    (5) beginning_list -> . beginning_list type
    (6) beginning_list -> . beginning_list declaration
    (7) beginning_list -> . beginning_list compound
    (8) beginning_list -> . beginning_list assignment_expression_semi
    (9) beginning_list -> . beginning_list expr
    (10) beginning_list -> . beginning_list for_loop
    (11) beginning_list -> . empty
    (86) empty -> .

    $end            reduce using rule 86 (empty -> .)
    COMMENT         reduce using rule 86 (empty -> .)
    LBRACE          reduce using rule 86 (empty -> .)
    FOR             reduce using rule 86 (empty -> .)
    VOID            reduce using rule 86 (empty -> .)
    SIZE_T          reduce using rule 86 (empty -> .)
    UNKNOWN         reduce using rule 86 (empty -> .)
    CHAR            reduce using rule 86 (empty -> .)
    SHORT           reduce using rule 86 (empty -> .)
    INT             reduce using rule 86 (empty -> .)
    LONG            reduce using rule 86 (empty -> .)
    FLOAT           reduce using rule 86 (empty -> .)
    DOUBLE          reduce using rule 86 (empty -> .)
    SIGNED          reduce using rule 86 (empty -> .)
    UNSIGNED        reduce using rule 86 (empty -> .)
    ID              reduce using rule 86 (empty -> .)
    MINUS           reduce using rule 86 (empty -> .)
    LOGNOT          reduce using rule 86 (empty -> .)
    INT_CONST       reduce using rule 86 (empty -> .)
    FLOAT_CONST     reduce using rule 86 (empty -> .)
    STRING_LITERAL  reduce using rule 86 (empty -> .)
    LPAREN          reduce using rule 86 (empty -> .)

    beginning_list                 shift and go to state 1
    empty                          shift and go to state 2
    first                          shift and go to state 3

state 1

    (1) first -> beginning_list .
    (3) beginning_list -> beginning_list . comment
    (4) beginning_list -> beginning_list . function_declaration
    (5) beginning_list -> beginning_list . type
    (6) beginning_list -> beginning_list . declaration
    (7) beginning_list -> beginning_list . compound
    (8) beginning_list -> beginning_list . assignment_expression_semi
    (9) beginning_list -> beginning_list . expr
    (10) beginning_list -> beginning_list . for_loop
    (12) comment -> . COMMENT
    (68) function_declaration -> . typeid arglist SEMI
    (69) function_declaration -> . typeid arglist compound
    (83) type -> . native_type
    (84) type -> . native_type TIMES
    (70) declaration -> . typeid SEMI
    (67) compound -> . LBRACE beginning_list RBRACE
    (24) assignment_expression_semi -> . assignment_expression SEMI
    (41) expr -> . unary_expression
    (42) expr -> . binop
    (43) expr -> . term
    (63) for_loop -> . FOR LPAREN assignment_expression SEMI binop SEMI increment RPAREN compound
    (71) typeid -> . type identifier
    (72) native_type -> . VOID
    (73) native_type -> . SIZE_T
    (74) native_type -> . UNKNOWN
    (75) native_type -> . CHAR
    (76) native_type -> . SHORT
    (77) native_type -> . INT
    (78) native_type -> . LONG
    (79) native_type -> . FLOAT
    (80) native_type -> . DOUBLE
    (81) native_type -> . SIGNED
    (82) native_type -> . UNSIGNED
    (21) assignment_expression -> . typeid assignment_operator expr
    (22) assignment_expression -> . identifier assignment_operator expr
    (23) assignment_expression -> . array_reference assignment_operator expr
    (32) unary_expression -> . unary_token_before term
    (40) binop -> . binop_expression
    (64) term -> . identifier
    (65) term -> . constant
    (66) term -> . array_reference
    (85) identifier -> . ID
    (62) array_reference -> . identifier subscript_list
    (28) unary_token_before -> . MINUS
    (29) unary_token_before -> . LOGNOT
    (36) binop_expression -> . term
    (37) binop_expression -> . binop_paren TIMES binop_paren
    (38) binop_expression -> . binop_paren DIVIDE binop_paren
    (39) binop_expression -> . binop_paren binary_token binop_paren
    (25) constant -> . INT_CONST
    (26) constant -> . FLOAT_CONST
    (27) constant -> . STRING_LITERAL
    (34) binop_paren -> . LPAREN binop_expression RPAREN
    (35) binop_paren -> . binop_expression

    $end            reduce using rule 1 (first -> beginning_list .)
    COMMENT         shift and go to state 19
    LBRACE          shift and go to state 28
    FOR             shift and go to state 21
    VOID            shift and go to state 10
    SIZE_T          shift and go to state 42
    UNKNOWN         shift and go to state 9
    CHAR            shift and go to state 14
    SHORT           shift and go to state 6
    INT             shift and go to state 37
    LONG            shift and go to state 23
    FLOAT           shift and go to state 39
    DOUBLE          shift and go to state 41
    SIGNED          shift and go to state 40
    UNSIGNED        shift and go to state 22
    ID              shift and go to state 31
    MINUS           shift and go to state 18
    LOGNOT          shift and go to state 15
    INT_CONST       shift and go to state 20
    FLOAT_CONST     shift and go to state 44
    STRING_LITERAL  shift and go to state 32
    LPAREN          shift and go to state 29

    comment                        shift and go to state 4
    unary_token_before             shift and go to state 5
    constant                       shift and go to state 7
    unary_expression               shift and go to state 8
    compound                       shift and go to state 11
    binop_paren                    shift and go to state 12
    binop_expression               shift and go to state 13
    native_type                    shift and go to state 17
    array_reference                shift and go to state 16
    type                           shift and go to state 24
    for_loop                       shift and go to state 25
    assignment_expression          shift and go to state 26
    binop                          shift and go to state 27
    declaration                    shift and go to state 30
    typeid                         shift and go to state 33
    term                           shift and go to state 34
    assignment_expression_semi     shift and go to state 35
    function_declaration           shift and go to state 36
    expr                           shift and go to state 38
    identifier                     shift and go to state 43

state 2

    (2) first -> empty .
    (11) beginning_list -> empty .

  ! reduce/reduce conflict for $end resolved using rule 2 (first -> empty .)
    $end            reduce using rule 2 (first -> empty .)
    COMMENT         reduce using rule 11 (beginning_list -> empty .)
    LBRACE          reduce using rule 11 (beginning_list -> empty .)
    FOR             reduce using rule 11 (beginning_list -> empty .)
    VOID            reduce using rule 11 (beginning_list -> empty .)
    SIZE_T          reduce using rule 11 (beginning_list -> empty .)
    UNKNOWN         reduce using rule 11 (beginning_list -> empty .)
    CHAR            reduce using rule 11 (beginning_list -> empty .)
    SHORT           reduce using rule 11 (beginning_list -> empty .)
    INT             reduce using rule 11 (beginning_list -> empty .)
    LONG            reduce using rule 11 (beginning_list -> empty .)
    FLOAT           reduce using rule 11 (beginning_list -> empty .)
    DOUBLE          reduce using rule 11 (beginning_list -> empty .)
    SIGNED          reduce using rule 11 (beginning_list -> empty .)
    UNSIGNED        reduce using rule 11 (beginning_list -> empty .)
    ID              reduce using rule 11 (beginning_list -> empty .)
    MINUS           reduce using rule 11 (beginning_list -> empty .)
    LOGNOT          reduce using rule 11 (beginning_list -> empty .)
    INT_CONST       reduce using rule 11 (beginning_list -> empty .)
    FLOAT_CONST     reduce using rule 11 (beginning_list -> empty .)
    STRING_LITERAL  reduce using rule 11 (beginning_list -> empty .)
    LPAREN          reduce using rule 11 (beginning_list -> empty .)

  ! $end            [ reduce using rule 11 (beginning_list -> empty .) ]


state 3

    (0) S' -> first .



state 4

    (3) beginning_list -> beginning_list comment .

    COMMENT         reduce using rule 3 (beginning_list -> beginning_list comment .)
    LBRACE          reduce using rule 3 (beginning_list -> beginning_list comment .)
    FOR             reduce using rule 3 (beginning_list -> beginning_list comment .)
    VOID            reduce using rule 3 (beginning_list -> beginning_list comment .)
    SIZE_T          reduce using rule 3 (beginning_list -> beginning_list comment .)
    UNKNOWN         reduce using rule 3 (beginning_list -> beginning_list comment .)
    CHAR            reduce using rule 3 (beginning_list -> beginning_list comment .)
    SHORT           reduce using rule 3 (beginning_list -> beginning_list comment .)
    INT             reduce using rule 3 (beginning_list -> beginning_list comment .)
    LONG            reduce using rule 3 (beginning_list -> beginning_list comment .)
    FLOAT           reduce using rule 3 (beginning_list -> beginning_list comment .)
    DOUBLE          reduce using rule 3 (beginning_list -> beginning_list comment .)
    SIGNED          reduce using rule 3 (beginning_list -> beginning_list comment .)
    UNSIGNED        reduce using rule 3 (beginning_list -> beginning_list comment .)
    ID              reduce using rule 3 (beginning_list -> beginning_list comment .)
    MINUS           reduce using rule 3 (beginning_list -> beginning_list comment .)
    LOGNOT          reduce using rule 3 (beginning_list -> beginning_list comment .)
    INT_CONST       reduce using rule 3 (beginning_list -> beginning_list comment .)
    FLOAT_CONST     reduce using rule 3 (beginning_list -> beginning_list comment .)
    STRING_LITERAL  reduce using rule 3 (beginning_list -> beginning_list comment .)
    LPAREN          reduce using rule 3 (beginning_list -> beginning_list comment .)
    $end            reduce using rule 3 (beginning_list -> beginning_list comment .)
    RBRACE          reduce using rule 3 (beginning_list -> beginning_list comment .)


state 5

    (32) unary_expression -> unary_token_before . term
    (64) term -> . identifier
    (65) term -> . constant
    (66) term -> . array_reference
    (85) identifier -> . ID
    (25) constant -> . INT_CONST
    (26) constant -> . FLOAT_CONST
    (27) constant -> . STRING_LITERAL
    (62) array_reference -> . identifier subscript_list

    ID              shift and go to state 31
    INT_CONST       shift and go to state 20
    FLOAT_CONST     shift and go to state 44
    STRING_LITERAL  shift and go to state 32

    term                           shift and go to state 45
    constant                       shift and go to state 7
    array_reference                shift and go to state 46
    identifier                     shift and go to state 47

state 6

    (76) native_type -> SHORT .

    TIMES           reduce using rule 76 (native_type -> SHORT .)
    ID              reduce using rule 76 (native_type -> SHORT .)
    COMMENT         reduce using rule 76 (native_type -> SHORT .)
    LBRACE          reduce using rule 76 (native_type -> SHORT .)
    FOR             reduce using rule 76 (native_type -> SHORT .)
    VOID            reduce using rule 76 (native_type -> SHORT .)
    SIZE_T          reduce using rule 76 (native_type -> SHORT .)
    UNKNOWN         reduce using rule 76 (native_type -> SHORT .)
    CHAR            reduce using rule 76 (native_type -> SHORT .)
    SHORT           reduce using rule 76 (native_type -> SHORT .)
    INT             reduce using rule 76 (native_type -> SHORT .)
    LONG            reduce using rule 76 (native_type -> SHORT .)
    FLOAT           reduce using rule 76 (native_type -> SHORT .)
    DOUBLE          reduce using rule 76 (native_type -> SHORT .)
    SIGNED          reduce using rule 76 (native_type -> SHORT .)
    UNSIGNED        reduce using rule 76 (native_type -> SHORT .)
    MINUS           reduce using rule 76 (native_type -> SHORT .)
    LOGNOT          reduce using rule 76 (native_type -> SHORT .)
    INT_CONST       reduce using rule 76 (native_type -> SHORT .)
    FLOAT_CONST     reduce using rule 76 (native_type -> SHORT .)
    STRING_LITERAL  reduce using rule 76 (native_type -> SHORT .)
    LPAREN          reduce using rule 76 (native_type -> SHORT .)
    $end            reduce using rule 76 (native_type -> SHORT .)
    RBRACE          reduce using rule 76 (native_type -> SHORT .)


state 7

    (65) term -> constant .

    TIMES           reduce using rule 65 (term -> constant .)
    DIVIDE          reduce using rule 65 (term -> constant .)
    PLUS            reduce using rule 65 (term -> constant .)
    MINUS           reduce using rule 65 (term -> constant .)
    MOD             reduce using rule 65 (term -> constant .)
    OR              reduce using rule 65 (term -> constant .)
    AND             reduce using rule 65 (term -> constant .)
    LSHIFT          reduce using rule 65 (term -> constant .)
    RSHIFT          reduce using rule 65 (term -> constant .)
    LOGOR           reduce using rule 65 (term -> constant .)
    LOGAND          reduce using rule 65 (term -> constant .)
    LT              reduce using rule 65 (term -> constant .)
    GT              reduce using rule 65 (term -> constant .)
    LE              reduce using rule 65 (term -> constant .)
    GE              reduce using rule 65 (term -> constant .)
    EQ              reduce using rule 65 (term -> constant .)
    NE              reduce using rule 65 (term -> constant .)
    COMMENT         reduce using rule 65 (term -> constant .)
    LBRACE          reduce using rule 65 (term -> constant .)
    FOR             reduce using rule 65 (term -> constant .)
    VOID            reduce using rule 65 (term -> constant .)
    SIZE_T          reduce using rule 65 (term -> constant .)
    UNKNOWN         reduce using rule 65 (term -> constant .)
    CHAR            reduce using rule 65 (term -> constant .)
    SHORT           reduce using rule 65 (term -> constant .)
    INT             reduce using rule 65 (term -> constant .)
    LONG            reduce using rule 65 (term -> constant .)
    FLOAT           reduce using rule 65 (term -> constant .)
    DOUBLE          reduce using rule 65 (term -> constant .)
    SIGNED          reduce using rule 65 (term -> constant .)
    UNSIGNED        reduce using rule 65 (term -> constant .)
    ID              reduce using rule 65 (term -> constant .)
    LOGNOT          reduce using rule 65 (term -> constant .)
    INT_CONST       reduce using rule 65 (term -> constant .)
    FLOAT_CONST     reduce using rule 65 (term -> constant .)
    STRING_LITERAL  reduce using rule 65 (term -> constant .)
    LPAREN          reduce using rule 65 (term -> constant .)
    $end            reduce using rule 65 (term -> constant .)
    RPAREN          reduce using rule 65 (term -> constant .)
    SEMI            reduce using rule 65 (term -> constant .)
    RBRACE          reduce using rule 65 (term -> constant .)
    RBRACKET        reduce using rule 65 (term -> constant .)
    PLUSPLUS        reduce using rule 65 (term -> constant .)
    MINUSMINUS      reduce using rule 65 (term -> constant .)


state 8

    (41) expr -> unary_expression .

    RBRACKET        reduce using rule 41 (expr -> unary_expression .)
    SEMI            reduce using rule 41 (expr -> unary_expression .)
    RBRACE          reduce using rule 41 (expr -> unary_expression .)
    COMMENT         reduce using rule 41 (expr -> unary_expression .)
    LBRACE          reduce using rule 41 (expr -> unary_expression .)
    FOR             reduce using rule 41 (expr -> unary_expression .)
    VOID            reduce using rule 41 (expr -> unary_expression .)
    SIZE_T          reduce using rule 41 (expr -> unary_expression .)
    UNKNOWN         reduce using rule 41 (expr -> unary_expression .)
    CHAR            reduce using rule 41 (expr -> unary_expression .)
    SHORT           reduce using rule 41 (expr -> unary_expression .)
    INT             reduce using rule 41 (expr -> unary_expression .)
    LONG            reduce using rule 41 (expr -> unary_expression .)
    FLOAT           reduce using rule 41 (expr -> unary_expression .)
    DOUBLE          reduce using rule 41 (expr -> unary_expression .)
    SIGNED          reduce using rule 41 (expr -> unary_expression .)
    UNSIGNED        reduce using rule 41 (expr -> unary_expression .)
    ID              reduce using rule 41 (expr -> unary_expression .)
    MINUS           reduce using rule 41 (expr -> unary_expression .)
    LOGNOT          reduce using rule 41 (expr -> unary_expression .)
    INT_CONST       reduce using rule 41 (expr -> unary_expression .)
    FLOAT_CONST     reduce using rule 41 (expr -> unary_expression .)
    STRING_LITERAL  reduce using rule 41 (expr -> unary_expression .)
    LPAREN          reduce using rule 41 (expr -> unary_expression .)
    $end            reduce using rule 41 (expr -> unary_expression .)


state 9

    (74) native_type -> UNKNOWN .

    TIMES           reduce using rule 74 (native_type -> UNKNOWN .)
    ID              reduce using rule 74 (native_type -> UNKNOWN .)
    COMMENT         reduce using rule 74 (native_type -> UNKNOWN .)
    LBRACE          reduce using rule 74 (native_type -> UNKNOWN .)
    FOR             reduce using rule 74 (native_type -> UNKNOWN .)
    VOID            reduce using rule 74 (native_type -> UNKNOWN .)
    SIZE_T          reduce using rule 74 (native_type -> UNKNOWN .)
    UNKNOWN         reduce using rule 74 (native_type -> UNKNOWN .)
    CHAR            reduce using rule 74 (native_type -> UNKNOWN .)
    SHORT           reduce using rule 74 (native_type -> UNKNOWN .)
    INT             reduce using rule 74 (native_type -> UNKNOWN .)
    LONG            reduce using rule 74 (native_type -> UNKNOWN .)
    FLOAT           reduce using rule 74 (native_type -> UNKNOWN .)
    DOUBLE          reduce using rule 74 (native_type -> UNKNOWN .)
    SIGNED          reduce using rule 74 (native_type -> UNKNOWN .)
    UNSIGNED        reduce using rule 74 (native_type -> UNKNOWN .)
    MINUS           reduce using rule 74 (native_type -> UNKNOWN .)
    LOGNOT          reduce using rule 74 (native_type -> UNKNOWN .)
    INT_CONST       reduce using rule 74 (native_type -> UNKNOWN .)
    FLOAT_CONST     reduce using rule 74 (native_type -> UNKNOWN .)
    STRING_LITERAL  reduce using rule 74 (native_type -> UNKNOWN .)
    LPAREN          reduce using rule 74 (native_type -> UNKNOWN .)
    $end            reduce using rule 74 (native_type -> UNKNOWN .)
    RBRACE          reduce using rule 74 (native_type -> UNKNOWN .)


state 10

    (72) native_type -> VOID .

    TIMES           reduce using rule 72 (native_type -> VOID .)
    ID              reduce using rule 72 (native_type -> VOID .)
    COMMENT         reduce using rule 72 (native_type -> VOID .)
    LBRACE          reduce using rule 72 (native_type -> VOID .)
    FOR             reduce using rule 72 (native_type -> VOID .)
    VOID            reduce using rule 72 (native_type -> VOID .)
    SIZE_T          reduce using rule 72 (native_type -> VOID .)
    UNKNOWN         reduce using rule 72 (native_type -> VOID .)
    CHAR            reduce using rule 72 (native_type -> VOID .)
    SHORT           reduce using rule 72 (native_type -> VOID .)
    INT             reduce using rule 72 (native_type -> VOID .)
    LONG            reduce using rule 72 (native_type -> VOID .)
    FLOAT           reduce using rule 72 (native_type -> VOID .)
    DOUBLE          reduce using rule 72 (native_type -> VOID .)
    SIGNED          reduce using rule 72 (native_type -> VOID .)
    UNSIGNED        reduce using rule 72 (native_type -> VOID .)
    MINUS           reduce using rule 72 (native_type -> VOID .)
    LOGNOT          reduce using rule 72 (native_type -> VOID .)
    INT_CONST       reduce using rule 72 (native_type -> VOID .)
    FLOAT_CONST     reduce using rule 72 (native_type -> VOID .)
    STRING_LITERAL  reduce using rule 72 (native_type -> VOID .)
    LPAREN          reduce using rule 72 (native_type -> VOID .)
    $end            reduce using rule 72 (native_type -> VOID .)
    RBRACE          reduce using rule 72 (native_type -> VOID .)


state 11

    (7) beginning_list -> beginning_list compound .
